Fixed CSS for dashboard RSS feed items overlapping

--- a/system/pyrocms/themes/admin_theme/css/admin/style.css
+++ b/system/pyrocms/themes/admin_theme/css/admin/style.css
@@ -805,6 +805,7 @@ ul#news-feed {
 	list-style: none;
 	margin-left: 0;
 	position: relative;
+	clear: both;	
 }
 #news-feed li:first-child {
 	border-top: none;
